--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,15 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    implementation 'mysql:mysql-connector-java:8.0.31'
+//    implementation 'mysql:mysql-connector-java:8.0.31'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.session:spring-session-core'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'com.h2database:h2'
 
 }
 
